Cleanups of tests