@@ -2,12 +2,10 @@ package org.lflang.tests.runtime;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.file.Files;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -16,7 +14,6 @@ import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -56,7 +53,6 @@ import com.google.inject.Provider;
  * Base class for test classes that define JUnit tests.
  *
  * @author Marten Lohstroh <marten@berkeley.edu>
- *
  */
 @ExtendWith(InjectionExtension.class)
 @InjectWith(LFInjectorProvider.class)
@@ -100,22 +96,13 @@ public abstract class TestBase {
      */
     protected boolean codeCovOnly;
 
-    /**
-     * AST transformation that sets the `threads` target property to 0.
-     * @return True if successful, false otherwise.
-     */
-    private static Function<LFTest, Boolean> makeSingleThreaded = it -> {
-        it.getContext().getArgs().setProperty("threads", "0");
-        return true;
-    };
-
 
     /**
      * An enumeration of test levels.
      * @author Marten Lohstroh <marten@berkeley.edu>
      *
      */
-    public enum TestLevel {VALIDATION, CODE_GEN, BUILD, EXECUTION};
+    public enum TestLevel {VALIDATION, CODE_GEN, BUILD, EXECUTION}
 
     /**
      * A collection messages often used throughout the test package.
@@ -123,21 +110,21 @@ public abstract class TestBase {
      * @author Marten Lohstroh <marten@berkeley.edu>
      *
      */
-    public class Message {
+    public static class Message {
         /* Reasons for not running tests. */
-        public final static String NO_WINDOWS_SUPPORT = "Not (yet) supported on Windows.";
-        public final static String NO_CPP_SUPPORT = "Not supported by reactor-cpp.";
-        public final static String NO_RUST_SUPPORT = "Not supported by reactor-rust.";
-        public final static String NOT_FOR_CODE_COV = "Unlikely to help improve code coverage.";
-        public final static String ALWAYS_MULTITHREADED = "The reactor-ccp runtime is always multithreaded.";
+        public static final String NO_WINDOWS_SUPPORT = "Not (yet) supported on Windows.";
+        public static final String NO_CPP_SUPPORT = "Not supported by reactor-cpp.";
+        public static final String NO_RUST_SUPPORT = "Not supported by reactor-rust.";
+        public static final String NOT_FOR_CODE_COV = "Unlikely to help improve code coverage.";
+        public static final String ALWAYS_MULTITHREADED = "The reactor-ccp runtime is always multithreaded.";
 
         /* Descriptions of collections of tests. */
-        public final static String DESC_SERIALIZATION = "Run serialization tests (threads = 0).";
-        public final static String DESC_AS_FEDERATED = "Run non-federated tests in federated mode.";
-        public final static String DESC_FEDERATED = "Run federated tests.";
-        public final static String DESC_TARGET_SPECIFIC = "Run target-specific tests (threads = 0)";
-        public final static String DESC_AS_CCPP = "Running C tests as CCpp.";
-        public final static String DESC_FOUR_THREADS = "Run non-concurrent and non-federated tests (threads = 4).";
+        public static final String DESC_SERIALIZATION = "Run serialization tests (threads = 0).";
+        public static final String DESC_AS_FEDERATED = "Run non-federated tests in federated mode.";
+        public static final String DESC_FEDERATED = "Run federated tests.";
+        public static final String DESC_TARGET_SPECIFIC = "Run target-specific tests (threads = 0)";
+        public static final String DESC_AS_CCPP = "Running C tests as CCpp.";
+        public static final String DESC_FOUR_THREADS = "Run non-concurrent and non-federated tests (threads = 4).";
     }
 
     /** Constructor for test classes that test a single target. */
@@ -164,9 +151,9 @@ public abstract class TestBase {
      * registry.
      */
     protected final void runTestsAndPrintResults(Target target,
-            Predicate<TestCategory> selected, Function<LFTest, Boolean> configuration,
-            TestLevel level,
-            boolean copy) {
+                                                 Predicate<TestCategory> selected, Predicate<LFTest> configuration,
+                                                 TestLevel level,
+                                                 boolean copy) {
         var categories = Arrays.stream(TestCategory.values()).filter(selected)
                 .collect(Collectors.toList());
         for (var category : categories) {
@@ -197,15 +184,16 @@ public abstract class TestBase {
      * registry.
      */
     protected void runTestsForTargets(String description,
-            Predicate<TestCategory> selected,
-            Function<LFTest, Boolean> configuration, TestLevel level,
-            boolean copy) {
+                                      Predicate<TestCategory> selected,
+                                      Predicate<LFTest> configuration,
+                                      TestLevel level,
+                                      boolean copy) {
         for (Target target : this.targets) {
-            runTestsFor(Arrays.asList(target), description, selected,
-                    configuration, level, copy);
+            runTestsFor(List.of(target), description, selected,
+                        configuration, level, copy);
         }
     }
-    
+
     /**
      * Run tests in the given selection for a subset of given targets.
      *
@@ -218,13 +206,15 @@ public abstract class TestBase {
      * @param copy Whether or not to work on copies of tests in the test.
      * registry.
      */
-    protected void runTestsFor(List<Target> subset, String description,
-            Predicate<TestCategory> selected, Function<LFTest, Boolean> configuration,
-            TestLevel level, boolean copy) {
+    protected void runTestsFor(List<Target> subset,
+                               String description,
+                               Predicate<TestCategory> selected,
+                               Predicate<LFTest> configuration,
+                               TestLevel level,
+                               boolean copy) {
         for (Target target : subset) {
             printTestHeader(target, description);
-            runTestsAndPrintResults(target, selected, configuration, level,
-                    copy);
+            runTestsAndPrintResults(target, selected, configuration, level, copy);
         }
     }
 
@@ -234,8 +224,7 @@ public abstract class TestBase {
      */
     protected static boolean isWindows() {
         String OS = System.getProperty("os.name").toLowerCase();
-        if (OS.indexOf("win") >= 0) { return true; }
-        return false;
+        return OS.contains("win");
     }
 
     /**
@@ -340,8 +329,7 @@ public abstract class TestBase {
      * transformation that may have occured in other tests.
      * @throws IOException if there is any file access problem
      */
-    private GeneratorContext configure(LFTest test,
-            Function<LFTest, Boolean> configuration, TestLevel level) throws IOException {
+    private GeneratorContext configure(LFTest test, Predicate<LFTest> configuration, TestLevel level) throws IOException {
 
         var context = new StandaloneContext();
         // Update file config, which includes a fresh resource that has not
@@ -372,7 +360,7 @@ public abstract class TestBase {
         addExtraLfcArgs(context.getArgs());
 
         // Update the test by applying the configuration. E.g., to carry out an AST transformation.
-        if (configuration != null && !configuration.apply(test)) {
+        if (configuration != null && !configuration.test(test)) {
             test.result = Result.CONFIG_FAIL;
             throw new AssertionError("Test configuration unsuccessful.");
         }
@@ -382,9 +370,6 @@ public abstract class TestBase {
 
     /**
      * Validate the given test. Throw an AssertionError if validation failed.
-     * @param test
-     * @param context
-     * @return
      */
     private void validate(LFTest test, GeneratorContext context) {
         // Validate the resource and store issues in the test object.
@@ -530,11 +515,9 @@ public abstract class TestBase {
      * @param tests A set of tests to run.
      * @param configuration A function for configuring the tests.
      * @param level The level of testing.
-     * @throws IOException
+     * @throws IOException If initial file configuration fails
      */
-    private void validateAndRun(Set<LFTest> tests,
-            Function<LFTest, Boolean> configuration, TestLevel level)
-            throws IOException {
+    private void validateAndRun(Set<LFTest> tests, Predicate<LFTest> configuration, TestLevel level) throws IOException {
         final var x = 78f / tests.size();
         var marks = 0;
         var done = 0;
@@ -593,29 +576,29 @@ public abstract class TestBase {
     @Test
     public void runGenericTests() {
         runTestsForTargets("Description: Run generic tests (threads = 0).",
-                TestCategory.GENERIC::equals, makeSingleThreaded,
-                TestLevel.EXECUTION, false);
+                           TestCategory.GENERIC::equals, ConfigurationPredicates::makeSingleThreaded,
+                           TestLevel.EXECUTION, false);
     }
 
     @Test
     public void runTargetSpecificTests() {
         runTestsForTargets("Description: Run target-specific tests (threads = 0).",
-                TestCategory.TARGET::equals, makeSingleThreaded,
-                TestLevel.EXECUTION, false);
+                           TestCategory.TARGET::equals, ConfigurationPredicates::makeSingleThreaded,
+                           TestLevel.EXECUTION, false);
     }
 
     @Test
     public void runMultiportTests() {
         runTestsForTargets("Description: Run multiport tests (threads = 0).",
-                TestCategory.MULTIPORT::equals, makeSingleThreaded,
-                TestLevel.EXECUTION, false);
+                           TestCategory.MULTIPORT::equals, ConfigurationPredicates::makeSingleThreaded,
+                           TestLevel.EXECUTION, false);
     }
 
     @Test
     public void runSerializationTests() {
         runTestsForTargets("Description: Run serialization tests (threads = 0).",
-                TestCategory.SERIALIZATION::equals, makeSingleThreaded,
-                TestLevel.EXECUTION, false);
+                           TestCategory.SERIALIZATION::equals, ConfigurationPredicates::makeSingleThreaded,
+                           TestLevel.EXECUTION, false);
     }
 
     @Test
@@ -628,11 +611,12 @@ public abstract class TestBase {
                                         // FIXME: also run the multiport tests once these are supported.
                                         TestCategory.MULTIPORT));
 
-        runTestsFor(Arrays.asList(Target.C), Message.DESC_AS_FEDERATED,
-                                categories::contains,
-                                it -> ASTUtils.makeFederated(it.fileConfig.resource),
-                                TestLevel.EXECUTION,
-                                true);
+        runTestsFor(List.of(Target.C),
+                    Message.DESC_AS_FEDERATED,
+                    categories::contains,
+                    it -> ASTUtils.makeFederated(it.fileConfig.resource),
+                    TestLevel.EXECUTION,
+                    true);
     }
 
 
